tools/hermes/tests/fixtures/multiple_errors/expected.stderr

=== Hermes Verification Failed ===

[Hermes Error] hermes::syn_error

  × Syntax error in Rust source: cannot parse string into token stream
   ╭─[[PROJECT_ROOT]/src/a.rs:1:12]
 1 │ fn broken( {
   ·            ▲
   ·            ╰── here
 2 │ 
   ╰────


[Hermes Error] hermes::doc_block

  × Documentation block error: Unclosed Hermes block in documentation.
   ╭─[[PROJECT_ROOT]/src/b.rs:1:1]
 1 │ /// ```lean, hermes
   · ─────────┬─────────
   ·          ╰── problematic block
 2 │ /// context:
   ╰────

Error: Aborting due to 2 previous errors.
